--- a/composer.json
+++ b/composer.json
@@ -13,19 +13,17 @@
     "MIT"
   ],
   "require" : {
-    "php": ">=5.3.3",
+    "php": ">=5.3.9",
     "symfony/symfony": ">=2.6",
     "doctrine/orm": "~2.2,>=2.2.3,<2.5",
     "doctrine/dbal": "<2.5",
-    "doctrine/doctrine-bundle": "~1.2",
-    "twig/extensions": "~1.0",
+    "doctrine/doctrine-bundle": "~1.4",
     "symfony/assetic-bundle": "~2.3",
     "symfony/swiftmailer-bundle": "~2.3",
     "symfony/monolog-bundle": "~2.4",
-    "sensio/distribution-bundle": ">=3.0",
+    "sensio/distribution-bundle": "~4.0",
     "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
-    "incenteev/composer-parameter-handler": "~2.0",
-    "almasaeed2010/adminlte": "2.*@dev"
+    "incenteev/composer-parameter-handler": "~2.0"
   },
   "target-dir" : "AT/UserBundle",
   "autoload" : {
