--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "require" : {
     "php": ">=5.3.9",
-    "symfony/symfony": ">=2.6",
+    "symfony/symfony": ">=2.7.*",
     "doctrine/orm": "~2.2,>=2.2.3,<2.5",
     "doctrine/dbal": "<2.5",
     "doctrine/doctrine-bundle": "~1.4",
@@ -23,7 +23,10 @@
     "symfony/monolog-bundle": "~2.4",
     "sensio/distribution-bundle": "~4.0",
     "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
-    "incenteev/composer-parameter-handler": "~2.0"
+    "incenteev/composer-parameter-handler": "~2.0",
+
+    "friendsofsymfony/user-bundle": "~2.0@dev",
+    "sonata-project/doctrine-extensions": "^1.0"
   },
   "target-dir" : "AT/UserBundle",
   "autoload" : {
