--- a/composer.json
+++ b/composer.json
@@ -13,20 +13,21 @@
     "MIT"
   ],
   "require" : {
-    "php": ">=5.3.9",
-    "symfony/symfony": ">=2.6",
-    "doctrine/orm": "~2.2,>=2.2.3,<2.5",
-    "doctrine/dbal": "<2.5",
-    "doctrine/doctrine-bundle": "~1.4",
-    "symfony/assetic-bundle": "~2.3",
-    "symfony/swiftmailer-bundle": "~2.3",
-    "symfony/monolog-bundle": "~2.4",
-    "sensio/distribution-bundle": "~4.0",
-    "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
-    "incenteev/composer-parameter-handler": "~2.0",
+    "php": ">=5.3.2",
+    "symfony/framework-bundle": "~2.3",
+    "symfony/twig-bundle": "~2.3",
+    "symfony/form": "~2.3",
+    "symfony/security-bundle": "~2.3",
 
     "friendsofsymfony/user-bundle": "~2.0@dev",
     "sonata-project/doctrine-extensions": "^1.0"
+  },
+  "require-dev": {
+    "doctrine/doctrine-bundle": "~1.3",
+    "swiftmailer/swiftmailer": "~4.3|~5",
+    "willdurand/propel-typehintable-behavior": "~1.0",
+    "symfony/yaml": "~2.3",
+    "symfony/validator": "~2.3"
   },
   "target-dir" : "AT/UserBundle",
   "autoload" : {
