--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "symfony/form": "~2.3",
     "symfony/security-bundle": "~2.3",
 
-    "friendsofsymfony/user-bundle": "~2.0@dev",
+    "friendsofsymfony/user-bundle": "1.3.x",
     "sonata-project/doctrine-extensions": "^1.0"
   },
   "require-dev": {
