Readme et exemple de configuration pour l'utilisation du ATUserBundle Fix : namespace ATUserExtension.php

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -1,14 +1,8 @@
-at_user: ~
+# add this configuration to your application's config.yml
 doctrine:
     dbal:
         types:
             json: Sonata\Doctrine\Types\JsonType
-
-stof_doctrine_extensions:
-  default_locale: fr_FR
-  orm:
-    default:
-      timestampable: true
 
 fos_user:
     db_driver: orm
