--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,11 @@
     "symfony/form": "~2.3",
     "symfony/security-bundle": "~2.3",
 
-    "friendsofsymfony/user-bundle": "1.3.x",
+    "doctrine/orm": "~2.2,>=2.2.3,<2.5",
+    "doctrine/dbal": "<2.5",
+    "doctrine/doctrine-bundle": "~1.4",
+
+    "friendsofsymfony/user-bundle": "~2.0@dev",
     "sonata-project/doctrine-extensions": "^1.0"
   },
   "require-dev": {
